--- a/Kori/LanguageSelector.razor.css
+++ b/Kori/LanguageSelector.razor.css
@@ -1,7 +1,4 @@
-﻿.login-component__language {
-  padding-bottom: 8px;
-}
-.login-component__language .login-component__language-btn {
+﻿.kori-login__language .kori-login__language-btn {
   width: 100%;
   display: flex !important;
   justify-content: space-between !important;
@@ -17,7 +14,7 @@
   color: white !important;
   cursor: pointer;
 }
-.login-component__language .login-component__language-btn-content {
+.kori-login__language .kori-login__language-btn-content {
   display: flex !important;
   align-items: center !important;
   gap: 14px !important;
@@ -28,16 +25,16 @@
   color: white !important;
   opacity: 0.7 !important;
 }
-.login-component__language .login-component__language-btn .login-component__expand-icon {
+.kori-login__language .kori-login__language-btn .kori-login__expand-icon {
   width: 16px;
   height: 16px;
   transition: transform 1000ms ease-in-out;
   opacity: 0.7;
 }
-.login-component__language .login-component__language-btn .login-component__expand-icon.rotate {
+.kori-login__language .kori-login__language-btn .kori-login__expand-icon.rotate {
   transform: rotate(-180deg);
 }
-.login-component__language .login-component__language-list {
+.kori-login__language .kori-login__language-list {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -50,29 +47,96 @@
   opacity: 0;
   transition: all 1s ease-in-out;
 }
-.login-component__language .login-component__language-list.show {
+.kori-login__language .kori-login__language-list.show {
   max-height: 400px;
   opacity: 1;
 }
-.login-component__language .login-component__language-list li {
+.kori-login__language .kori-login__language-list li {
   list-style: none;
 }
-.login-component__language .login-component__language-list button {
+.kori-login__language .kori-login__language-list button {
   padding: 4px 8px;
   background: none !important;
   border: none !important;
   border-radius: 0 !important;
   text-align: left !important;
 }
-.login-component__language .login-component__language-list button aside {
+.kori-login__language .kori-login__language-list button aside {
   font-family: "Encode Sans Expanded" !important;
   font-size: 12px !important;
   font-weight: 400 !important;
   line-height: 140% !important;
   color: var(--grey-300) !important;
 }
+.kori-login__language .kori-mobile {
+  display: none;
+}
+.kori-login__language .kori-mobile .kori-language__selected {
+  width: 100%;
+  padding: 16px;
+  margin-bottom: 32px;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid var(--Gray-100, #E5E5E5);
+  border-radius: 8px;
+  color: white;
+}
+.kori-login__language .kori-mobile .kori-login__language-list {
+  height: 100%;
+  max-height: none;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  overflow-y: auto;
+}
+.kori-login__language .kori-mobile .kori-login__language-list button {
+  width: 100%;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid var(--Gray-800, #1E1E1E) !important;
+  border-radius: 8px !important;
+  font-style: normal;
+  transition: 0.3s ease-in-out;
+}
+.kori-login__language .kori-mobile .kori-login__language-list button aside {
+  font-style: normal;
+}
+.kori-login__language .kori-mobile .kori-login__language-list button:hover {
+  filter: brightness(105%);
+  border: 1px solid white;
+}
+.kori-login__language .kori-mobile .kori-login__language-list button:active {
+  filter: brightness(100%);
+  border: 1px solid white;
+}
+@media only screen and (max-width: 850px) {
+  .kori-login__language .kori-desktop {
+    display: none;
+  }
+  .kori-login__language .kori-mobile {
+    display: block;
+  }
+}
 
-.login-component__text-btn, .login-component__language .login-component__language-btn, .login-component__language .login-component__language-list button {
+.kori-login__text-primary, .kori-login__language .kori-mobile .kori-language__selected {
+  font-family: "Encode Sans Semi Expanded" !important;
+  font-size: 16px !important;
+  font-weight: 400 !important;
+  line-height: 160% !important;
+  color: var(--grey-50) !important;
+}
+
+.kori-login__text-secondary, .kori-login__language .kori-mobile aside {
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
+  color: var(--grey-300) !important;
+}
+
+.kori-login__text-btn, .kori-login__language .kori-login__language-btn, .kori-login__language .kori-login__language-list button {
   font-family: "Encode Sans Expanded" !important;
   font-size: 14px !important;
   font-weight: 400 !important;
@@ -82,26 +146,9 @@
   transition: 300ms ease-in-out !important;
   opacity: 0.7 !important;
 }
-.login-component__text-btn:hover, .login-component__language .login-component__language-btn:hover, .login-component__language .login-component__language-list button:hover {
+.kori-login__text-btn:hover, .kori-login__language .kori-login__language-btn:hover, .kori-login__language .kori-login__language-list button:hover {
   opacity: 1 !important;
 }
-.login-component__text-btn:active, .login-component__language .login-component__language-btn:active, .login-component__language .login-component__language-list button:active {
-  opacity: 0.7 !important;
-}
-
-.login-component__text-btn, .login-component__language .login-component__language-btn, .login-component__language .login-component__language-list button {
-  font-family: "Encode Sans Expanded" !important;
-  font-size: 14px !important;
-  font-weight: 400 !important;
-  line-height: 140% !important;
-  color: white !important;
-  cursor: pointer !important;
-  transition: 300ms ease-in-out !important;
-  opacity: 0.7 !important;
-}
-.login-component__text-btn:hover, .login-component__language .login-component__language-btn:hover, .login-component__language .login-component__language-list button:hover {
-  opacity: 1 !important;
-}
-.login-component__text-btn:active, .login-component__language .login-component__language-btn:active, .login-component__language .login-component__language-list button:active {
+.kori-login__text-btn:active, .kori-login__language .kori-login__language-btn:active, .kori-login__language .kori-login__language-list button:active {
   opacity: 0.7 !important;
 }
