--- a/Kori/GlobalLogin.razor.css
+++ b/Kori/GlobalLogin.razor.css
@@ -1,4 +1,4 @@
-﻿.login-component {
+﻿.kori-login {
   width: fit-content;
   padding: 12px;
   display: flex;
@@ -7,9 +7,9 @@
   position: absolute;
   top: 0;
   right: 16px;
-  z-index: 1000;
+  z-index: 2000;
 }
-.login-component .login-component__toggle {
+.kori-login .kori-login__toggle {
   width: 24px;
   height: 24px;
   padding: 0 !important;
@@ -18,23 +18,37 @@
   border-radius: 50%;
   cursor: pointer;
 }
-.login-component .login-component__toggle .login-user-icon {
+.kori-login .kori-login__toggle .login-user-icon {
   width: 36px !important;
   height: auto !important;
 }
-.login-component .login-component__toggle.loggedout {
+.kori-login .kori-login__toggle.loggedout {
   border: 1px solid var(--grey-50);
   border-radius: 50%;
 }
-.login-component .login-component__toggle.loggedin {
+.kori-login .kori-login__toggle.loggedin {
   display: none;
   border: 1px solid var(--green-500);
   border-radius: 50%;
 }
-.login-component .login-component__toggle.loggedin.show {
+.kori-login .kori-login__toggle.loggedin.show {
   display: block;
 }
-.login-component__btn {
+.kori-login .kori-login__close {
+  display: none;
+  width: 24px;
+  height: 24px;
+  padding: 0 !important;
+  background: none;
+  border: none;
+  border-radius: 0;
+  cursor: pointer;
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  z-index: 1001;
+}
+.kori-login__btn {
   padding: 8px 0 !important;
   background: none !important;
   border: none !important;
@@ -46,7 +60,7 @@
   color: white !important;
   cursor: pointer;
 }
-.login-component__menu {
+.kori-login__menu {
   display: none;
   width: 256px;
   height: fit-content;
@@ -57,41 +71,46 @@
   background: var(--grey-900);
   border: 1px solid var(--grey-700);
   border-radius: 4px;
-  animation: login-component__fadeIn 500ms ease-in-out;
+  animation: kori-login__fadeIn 500ms ease-in-out;
   z-index: 1000;
 }
-.login-component__menu.show {
+.kori-login__menu.show {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-.login-component .login-component__account-btn, .login-component .login-component__profile-btn, .login-component .login-component__setup-btn, .login-component .login-component__logout-btn {
+.kori-login .kori-login__account-btn, .kori-login .kori-login__profile-btn, .kori-login .kori-login__setup-btn, .kori-login .kori-login__logout-btn {
   display: flex;
   gap: 14px !important;
   align-items: center !important;
 }
-.login-component .login-component__account-btn img, .login-component .login-component__profile-btn img, .login-component .login-component__setup-btn img, .login-component .login-component__logout-btn img {
+.kori-login .kori-login__account-btn img, .kori-login .kori-login__profile-btn img, .kori-login .kori-login__setup-btn img, .kori-login .kori-login__logout-btn img {
   margin: 0 !important;
 }
-.login-component__menu-actions {
+.kori-login__menu-actions {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-.login-component__menu-actions .login-component__menu-divider {
+.kori-login__menu-actions .kori-desktop {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.kori-login__menu-actions .kori-login__menu-divider {
   width: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
 }
-.login-component__menu-actions button {
+.kori-login__menu-actions button {
   padding: 8px 0 !important;
   border-radius: 4px !important;
 }
-.login-component__menu-actions button img {
+.kori-login__menu-actions button img {
   width: 16px;
   height: 16px;
 }
-.login-component__menu-actions .login-component__login-btn, .login-component__menu-actions login-component__account-btn {
+.kori-login__menu-actions .kori-login__login-btn, .kori-login__menu-actions kori-login__account-btn {
   display: flex !important;
   gap: 14px !important;
   align-items: center !important;
@@ -100,46 +119,46 @@
   text-align: left !important;
   transition: 300ms ease-in-out;
 }
-.login-component__menu-actions .login-component__login-btn:hover, .login-component__menu-actions login-component__account-btn:hover {
+.kori-login__menu-actions .kori-login__login-btn:hover, .kori-login__menu-actions kori-login__account-btn:hover {
   background: var(--grey-700) !important;
 }
-.login-component__menu-actions .login-component__login-btn:active, .login-component__menu-actions login-component__account-btn:active {
+.kori-login__menu-actions .kori-login__login-btn:active, .kori-login__menu-actions kori-login__account-btn:active {
   background: var(--grey-800) !important;
 }
-.login-component__menu-actions .login-component__login-btn__content, .login-component__menu-actions login-component__account-btn__content {
+.kori-login__menu-actions .kori-login__login-btn__content, .kori-login__menu-actions kori-login__account-btn__content {
   text-align: left !important;
 }
-.login-component__menu-actions .login-component__use-passkey {
+.kori-login__menu-actions .kori-login__use-passkey {
   width: 100%;
 }
-.login-component__menu-actions .login-component__use-passkey button {
+.kori-login__menu-actions .kori-login__use-passkey button {
   display: flex;
   align-content: center;
   align-items: center;
   gap: 12px;
 }
-.login-component__menu-actions .login-component__use-passkey button img {
+.kori-login__menu-actions .kori-login__use-passkey button img {
   margin: 0 !important;
 }
-.login-component__menu-actions .login-component__different-email {
+.kori-login__menu-actions .kori-login__different-email {
   width: 100%;
   margin: 12px 0;
 }
-.login-component__menu-actions .login-component__different-email span {
+.kori-login__menu-actions .kori-login__different-email span {
   display: flex;
   align-content: center;
   align-items: center;
   gap: 12px;
 }
-.login-component__menu-actions .login-component__different-email button {
+.kori-login__menu-actions .kori-login__different-email button {
   padding: 0 !important;
 }
-.login-component__form {
+.kori-login__form {
   display: flex;
   flex-direction: column;
   gap: 4px;
 }
-.login-component__form .login-component__input {
+.kori-login__form .kori-login__input {
   display: flex;
   flex-direction: column;
   gap: 4px;
@@ -155,11 +174,11 @@
   font-weight: 400;
   line-height: 160%;
 }
-.login-component__form .login-component__input:focus {
+.kori-login__form .kori-login__input:focus {
   border: var(--grey-50) !important;
   backdrop-filter: brightness(120%) !important;
 }
-.login-component__form .login-component__submit-btn {
+.kori-login__form .kori-login__submit-btn {
   width: 100% !important;
   padding: 8px 12px !important;
   background: var(--grey-800) !important;
@@ -169,63 +188,111 @@
   line-height: 160%;
   transition: 300ms ease-in-out;
 }
-.login-component__form .login-component__submit-btn:hover {
+.kori-login__form .kori-login__submit-btn:hover {
   background: var(--grey-700) !important;
 }
-.login-component__form .login-component__submit-btn:active {
+.kori-login__form .kori-login__submit-btn:active {
   background: var(--grey-800) !important;
 }
-.login-component__form .login-component__form-error {
+.kori-login__form .kori-login__form-error {
   display: none;
 }
-.login-component__form .login-component__form-error span {
+.kori-login__form .kori-login__form-error span {
   margin-top: 8px;
   color: white;
   opacity: 0.7;
 }
-.login-component__form .login-component__form-error.show {
+.kori-login__form .kori-login__form-error.show {
   display: block;
 }
-.login-component__overlay.show {
+.kori-login__overlay.show {
   width: 100vw;
   height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
 }
 @media only screen and (max-width: 850px) {
-  .login-component {
+  .kori-login {
     position: static;
     padding: 0;
     z-index: auto;
   }
-  .login-component .login-component__toggle {
+  .kori-login .kori-login__toggle {
+    display: none;
     position: fixed;
     top: 16px;
     right: 66px;
-    z-index: 1001;
+    z-index: 1002;
   }
-  .login-component .login-component__menu {
+  .kori-login .kori-login__toggle.show {
+    display: block;
+  }
+  .kori-login .kori-login__close {
+    z-index: 1003;
+  }
+  .kori-login .kori-login__close.show {
+    display: block;
+  }
+  .kori-login .kori-login__menu {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 70%;
-    max-width: 400px;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     padding: 16px;
-    background: var(--grey-900);
-    border: 1px solid var(--grey-700);
-    border-radius: 8px;
-    transform: translate(-50%, -50%);
+    background: var(--grey-900, #0E0E0E);
+    border: 1px solid var(--grey-900, #0E0E0E);
+    border-radius: 0;
     display: none;
     z-index: 1002;
   }
-  .login-component .login-component__menu.show {
+  .kori-login .kori-login__menu.show {
     display: flex;
     flex-direction: column;
     gap: 16px;
   }
-  .login-component__overlay {
+  .kori-login .kori-desktop {
+    display: none;
+  }
+  .kori-login .kori-mobile {
+    display: block;
+  }
+  .kori-login .kori-mobile .tabs {
+    margin: 0 -16px;
+    margin-bottom: 24px;
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 2px solid var(--Gray-800, #1E1E1E);
+    color: #FFF;
+  }
+  .kori-login .kori-mobile .tabs div {
+    width: 100%;
+    padding-bottom: 10px;
+    text-align: center;
+  }
+  .kori-login .kori-mobile .tabs .show {
+    border-bottom: 2px solid #FFF;
+  }
+  .kori-login .kori-mobile .kori-login__tab {
+    display: none;
+    animation: kori-login__fadeIn 500ms ease-in-out;
+  }
+  .kori-login .kori-mobile .kori-login__tab.show {
+    display: block !important;
+  }
+  .kori-login .kori-mobile .kori-login__language {
+    display: none;
+    animation: kori-login__fadeIn 500ms ease-in-out;
+  }
+  .kori-login .kori-mobile .kori-login__language.show {
+    display: block !important;
+  }
+  .kori-login header {
+    margin-top: 56px;
+  }
+  .kori-login__overlay {
     display: none;
     position: fixed;
     top: 0;
@@ -234,35 +301,37 @@
     height: 100vh;
     z-index: 1000;
   }
-  .login-component__overlay.show {
+  .kori-login__overlay.show {
     display: block;
     background: rgba(0, 0, 0, 0.5);
   }
-  .login-component .login-component__form,
-  .login-component .login-component__menu-actions,
-  .login-component .login-component__btn {
+  .kori-login .kori-login__form,
+  .kori-login .kori-login__menu-actions,
+  .kori-login .kori-login__btn {
     width: 100%;
     padding: 8px 0;
     font-size: 16px;
   }
-  .login-component .login-component__input {
+  .kori-login .kori-login__input {
     width: 100%;
     font-size: 16px;
   }
-  .login-component .login-component__text-primary, .login-component .login-component__menu-header-wrapper, .login-component .login-component__menu-actions .login-component__login-btn__content figcaption, .login-component__menu-actions .login-component__login-btn__content .login-component figcaption, .login-component .login-component__menu-actions login-component__account-btn__content figcaption, .login-component__menu-actions login-component__account-btn__content .login-component figcaption,
-  .login-component .login-component__text-secondary,
-  .login-component .login-component__menu-header-wrapper p,
-  .login-component .login-component__menu-actions .login-component__login-btn__content aside,
-  .login-component__menu-actions .login-component__login-btn__content .login-component aside,
-  .login-component .login-component__menu-actions login-component__account-btn__content aside,
-  .login-component__menu-actions login-component__account-btn__content .login-component aside,
-  .login-component .login-component__text-btn {
+  .kori-login .kori-login__text-primary, .kori-login .kori-login__menu header, .kori-login .kori-login__menu-actions .kori-login__login-btn__content figcaption, .kori-login__menu-actions .kori-login__login-btn__content .kori-login figcaption, .kori-login .kori-login__menu-actions kori-login__account-btn__content figcaption, .kori-login__menu-actions kori-login__account-btn__content .kori-login figcaption,
+  .kori-login .kori-login__text-secondary,
+  .kori-login .kori-login__menu header p,
+  .kori-login .kori-login__menu-actions .kori-login__login-btn__content aside,
+  .kori-login__menu-actions .kori-login__login-btn__content .kori-login aside,
+  .kori-login .kori-login__menu-actions kori-login__account-btn__content aside,
+  .kori-login__menu-actions kori-login__account-btn__content .kori-login aside,
+  .kori-login .kori-login__text-btn {
     font-size: 16px;
     text-align: center;
   }
 }
-
-@keyframes login-component__fadeIn {
+.kori-login__language {
+  padding-bottom: 8px;
+}
+@keyframes kori-login__fadeIn {
   0% {
     opacity: 0;
   }
@@ -270,23 +339,21 @@
     opacity: 1;
   }
 }
-.login-component__text-primary, .login-component .login-component__menu-header-wrapper, .login-component__menu-actions .login-component__login-btn__content figcaption, .login-component__menu-actions login-component__account-btn__content figcaption {
+.kori-login .kori-login__text-primary, .kori-login .kori-login__menu header, .kori-login .kori-login__menu-actions .kori-login__login-btn__content figcaption, .kori-login__menu-actions .kori-login__login-btn__content .kori-login figcaption, .kori-login .kori-login__menu-actions kori-login__account-btn__content figcaption, .kori-login__menu-actions kori-login__account-btn__content .kori-login figcaption {
   font-family: "Encode Sans Semi Expanded" !important;
   font-size: 16px !important;
   font-weight: 400 !important;
   line-height: 160% !important;
   color: var(--grey-50) !important;
 }
-
-.login-component__text-secondary, .login-component .login-component__menu-header-wrapper p, .login-component__menu-actions .login-component__login-btn__content aside, .login-component__menu-actions login-component__account-btn__content aside {
+.kori-login .kori-login__text-secondary, .kori-login .kori-login__menu header p, .kori-login .kori-login__menu-actions .kori-login__login-btn__content aside, .kori-login__menu-actions .kori-login__login-btn__content .kori-login aside, .kori-login .kori-login__menu-actions kori-login__account-btn__content aside, .kori-login__menu-actions kori-login__account-btn__content .kori-login aside {
   font-family: "Encode Sans Expanded" !important;
   font-size: 14px !important;
   font-weight: 400 !important;
   line-height: 140% !important;
   color: var(--grey-300) !important;
 }
-
-.login-component__text-btn {
+.kori-login .kori-login__text-btn {
   font-family: "Encode Sans Expanded" !important;
   font-size: 14px !important;
   font-weight: 400 !important;
@@ -296,9 +363,9 @@
   transition: 300ms ease-in-out !important;
   opacity: 0.7 !important;
 }
-.login-component__text-btn:hover {
+.kori-login .kori-login__text-btn:hover {
   opacity: 1 !important;
 }
-.login-component__text-btn:active {
+.kori-login .kori-login__text-btn:active {
   opacity: 0.7 !important;
 }
