--- a/SparcFeatures/Html.razor
+++ b/SparcFeatures/Html.razor
@@ -26,6 +26,29 @@
             console.log('INITTING HYPERSCRIPT.....');
             _hyperscript.processNode(document.body);
         }
+
+        function screenSize() {
+            var screenWidth = window.innerWidth;
+            console.log(screenWidth);
+            var menu = document.getElementsByClassName("kori-login__mobile-menu")[0];
+
+            if (menu) {
+                console.log(menu.classList);
+                if (screenWidth <= 850) {
+                    menu.classList.add("show");
+                } else {
+                    menu.classList.remove("show");
+                }
+            }
+        }
+
+        // window.resize = screenSize();
+
+        // window.addEventListener("resize", e => {
+        //     var screenWidth = window.innerWidth;
+        //     e.stopImmediatePropagation();
+        //     screenSize();
+        // });
     </script>
     <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
 </body>
