--- a/Kori/GlobalLogin.razor
+++ b/Kori/GlobalLogin.razor
@@ -261,7 +261,7 @@
     bool ShowOverlay = false;
     bool UsePasskey = false;
     bool ShowFormError = false;
-    bool ShowLoginTab = false;
+    bool ShowLoginTab = true;
     bool ShowLanguageTab = false;
 
     protected override async Task OnInitializedAsync()
