--- a/Kori/GlobalLogin.razor.scss
+++ b/Kori/GlobalLogin.razor.scss
@@ -10,6 +10,10 @@
     right: 16px;
     z-index: 2000;
 
+    .kori-mobile {
+        display: none;
+    }
+
     .kori-login__toggle {
         width: 24px;
         height: 24px;
