fix html and css for mobile login buttons

--- a/Kori/GlobalLogin.razor
+++ b/Kori/GlobalLogin.razor
@@ -39,7 +39,9 @@
                                     </div>
                                 </button>
                                 <div class="kori-login__menu-divider"></div>
-                                <LanguageSelector @key="Language?.Id" SelectedLanguage="Language" LanguageChanged="UpdateLanguage" />
+                                <div class="kori-login__language">
+                                    <LanguageSelector @key="Language?.Id" SelectedLanguage="Language" LanguageChanged="UpdateLanguage" />
+                                </div>
                             </div>
                             <div class="kori-mobile">
                                 <div class="tabs">
@@ -76,7 +78,9 @@
                                     </div>
                                 </button>
                                 <div class="kori-login__menu-divider"></div>
-                                <LanguageSelector @key="Language?.Id" SelectedLanguage="Language" LanguageChanged="UpdateLanguage" />
+                                <div class="kori-login__language">
+                                    <LanguageSelector @key="Language?.Id" SelectedLanguage="Language" LanguageChanged="UpdateLanguage" />
+                                </div>
                             </div>
                             <div class="kori-mobile">
                                 <div class="tabs">
