--- a/Kori/GlobalLogin.razor.scss
+++ b/Kori/GlobalLogin.razor.scss
@@ -400,7 +400,7 @@
         .kori-login__text-secondary,
         .kori-login__text-btn {
             font-size: 16px;
-            text-align: center;
+            //text-align: center;
         }
     }
 
